Fixed the text wrapping in webkit

--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -155,7 +155,7 @@ nav A:hover {text-decoration: underline; color: #488CFF;}
     top: 5px;
     height: 70px;
     margin: 0 0 0 10px;
-    width: 200px;
+    width: 250px;
 }
 
 #header h1 {
